--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     width: 50%;
     margin: 0 auto;
+    position: relative;
 }
 
 label {
@@ -32,4 +33,8 @@ ol {
             content: counter(item);
         }
     }
+}
+
+button.clear {
+    float: right;
 }
